--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "superagent-promise": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "serve -s -n build",
     "start": "cross-env PORT=4100 react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
